# Dynamic-DateTime

./: README.md  pyproject.toml  requirements.txt
src/dynamic_dt/: __init__.py
tests/: test-main.py
