[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Dynamic-DateTime"
version = "0.1.11"
authors = [
  { name="thomas-xin", email="thomasxin@gmail.com" },
]
description = "A versatile datetime class supporting extremely large timescales and extremely precise measurements."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "python-dateutil>=2.9.0",
  "number-parser>=0.3.2",
  "pytz>=2025.2",
]

[project.urls]
Homepage = "https://github.com/thomas-xin/Dynamic-DateTime"
Issues = "https://github.com/thomas-xin/Dynamic-DateTime/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_dt"]